# factor-mining-tsinghua

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  README.md  config.py  docker-compose.yml  evaluate_model.py  generate_flab_report.py  generate_full_report.py  generate_report.py  pyproject.toml  requirements.txt  run.py  test_pipeline.py
.cursor/rules/: polars-data-cleaning.md
api/: main.py  models.py
backtest/: __init__.py  adaptive_combiner.py  engine.py  metrics.py  mlx_accel.py
data/: __init__.py  stock_data.py
docs/: DRAWDOWN_AND_EVALUATION.md  NO_NEGATIVE_RETURNS.md
docs/reports/: report_dragon_alpha_backtest_2026-02-21.md
evaluation/output/: Financial_Report_20260219.md  System_Audit_20260219.md  financial_report.md
factor_mining/: __init__.py  combiner.py  experience_memory.py  expression_engine.py  factor_library.py  generator.py  miner.py  operators.py
templates/: index.html
